--- a/papers/actor-based-large-neighborhood-search/main.tex
+++ b/papers/actor-based-large-neighborhood-search/main.tex
@@ -152,7 +152,7 @@ to their inherent uncertainty and dynamic nature. Methods such
 as Stochastic Programming~\citep{birge2011introduction}, fuzzy
 logic~\citep{zadeh1988fuzzy}, robust optimization~\citep{ben2009robust},
 dynamic optimization~\citep{yangMetaheuristicsDynamicCombinatorial2013}, and
-human-in-loop optimization~\citep{talbiMetaheuristicsDesignImplementation2009}
+human-guided search optimization~\citep{talbiMetaheuristicsDesignImplementation2009}
 have been proposed to address these issues. However, these methods often
 assume static data and problem settings. Maintenance scheduling exemplifies a
 dynamic problem where information is continually updated, requiring frequent
@@ -162,11 +162,12 @@ integrating optimization solutions into business processes guided by operations
 management principles (e.g., plan-do-check-act)~\citep{w.edwardsdemingOutCrisis}.
 This paper proposes a novel actor-based optimization approach using a large
 neighborhood search metaheuristic to address dynamic scheduling problems
-characterized by real-time data updates, external inputs influencing
-optimization, and interdependent decisions by multiple actors with differing
-objectives. The framework is tested on real-world maintenance scheduling for
-offshore platforms operated by Total Energies in the North Sea and demonstrates
-general applicability to a range of operational planning problems.
+characterized by real-time data updates and external inputs influencing
+optimization with future research focusing on integrating interdependent
+decisions by multiple actors with differing objectives. The framework is tested
+on real-world maintenance scheduling for offshore platforms operated by Total
+Energies in the North Sea and demonstrates general applicability to a range of
+operational planning problems.
 \end{abstract}
 
 %%Graphical abstract
