--- a/papers/actor-based-large-neighborhood-search/tex/solution_method.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/solution_method.tex
@@ -1,13 +1,14 @@
 \section{Solution Method}
 \label{sec:2-solution-method}
 
-\subsection{Actor-based Large Neighborhood Search}
-A metaheuristic that is affected by the end user and requires real-time feedback
-inherently requires an optimization approach that is able to repair infeasible solutions
-while also converging quickly. The large neighborhood search (LNS)~\cite{shaw1998using}
-metaheuristic has been shown satisfy these requirements in the literature
-\cite{gendreauHandbookMetaheuristics2019}. The most general form of the LNS metaheuristic
-is defined for static problems, meaning that the parameters that make up the problem instance
+\subsection{Actor-based Large Neighborhood Search} 
+A metaheuristic that is affected by the end user and requires real-time
+feedback inherently requires an optimization approach that is able to repair
+infeasible solutions while also converging quickly. The large neighborhood
+search (LNS)~\citep{shaw1998using} metaheuristic has been shown satisfy these
+requirements in the literature \citep{gendreauHandbookMetaheuristics2019}.
+The most general form of the LNS metaheuristic is defined for static
+problems, meaning that the parameters that make up the problem instance
 is not subject to change after the algorithm has started. To make the
 LNS adapt to changing parameters in real-time a message system have been
 implemented into the existing framework. This  extension is shown in algorithm
@@ -15,11 +16,12 @@ implemented into the existing framework. This  extension is shown in algorithm
 
 \subsubsection{Messages and Destructors}
 LNS in its most basic form has one constructor and one destructor which
-repeatedly destroy and rebuild the solution. For the AbLNS we will generalize
-on this concept by including messages as destructors. This generalization can
-be seen as being somewhat similar to how
-the adaptive LNS (ALNS)~\cite{pisinger2007general} is formulated, but where the different constructors and
-destructors are also chosen from sources external to the algorithm.
+repeatedly destroy and rebuild the solution. For the AbLNS we will
+generalize on this concept by including messages as destructors. This
+generalization can be seen as being somewhat similar to how the adaptive
+LNS (ALNS)~\cite{pisinger2007general} is formulated, but where the different
+constructors and destructors are also chosen from sources external to the
+algorithm.
 
 Extending on the classic setup we define the following set of 
 destructor messages, $\ElementMessage{}{} \in \SetMessageQueue$. Each
@@ -56,71 +58,85 @@ message is received by the system at time $\VarMetaTime \in \mathbb{R}$.
 	\end{itemize}
 \end{itemize}
 
-Each of these messages affect different parts of the weekly maintenance scheduling 
-problem. Notice here that the first four messages destruct the solution by
-changing the parameter space and the last message is a random destructor that destroys
-the solution space.
+Each of these messages affect different parts of the weekly maintenance
+scheduling  problem. Notice here that the first four messages destruct the
+solution by changing the parameter space and the last message is a random
+destructor that destroys the solution space.
 
-For a correct implementation it is critical that the that destruct messages are 
-handled one by one, and are not allowed to simply write to the solution and
-problem instance whenever they appear.
-Generalizing the destructors from being static structures into messages allows
-the solution to change in real-time to a changing parameter space. This means
-that the algorithm does not need to restart to handle changes in data.
+For a correct implementation it is critical that the that destruct messages
+are  handled one by one, and are not allowed to simply write to the solution and
+problem instance whenever they appear. Generalizing the destructors from being
+static structures into messages allows the solution to change in real-time to a
+changing parameter space. This means that the algorithm does not need to restart
+to handle changes in data.
 
 \input{../../tex/algorithms/actor-based-large-neighborhood-search}
 
-The basic LNS setup have here been extended with a `message queue` $\MessageQueue$. The message
-queue will be read from on every iteration of the LNS's main iteration loop.
-Here we notice that the incoming message is able to change both the solution $\Solution$
-but also the problem instance $\ProblemInstance$ itself. Due to the inherent property of LNS being
-able to optimize a solution that have become infeasible, LNS is well suited to handle changing parameters 
-in the problem instance $\ProblemInstance$ itself. Another property of the message queue is 
-that the algorithm can run indefinitely and as opposed to restarting the algorithm you
-pass messages containing new data and or state. This property avoid the time consuming initial
-convergence as the algorithm will be found in an optimized state when the
-solution is perturbed. Notice that:
+The basic LNS setup have here been extended with a `message queue` $
+\MessageQueue$. The message queue will be read from on every iteration of
+the LNS's main iteration loop. Here we notice that the incoming message is
+able to change both the solution $\Solution$ but also the problem instance $
+\ProblemInstance$ itself. Due to the inherent property of LNS being able to
+optimize a solution that have become infeasible, LNS is well suited to handle
+changing parameters  in the problem instance $\ProblemInstance$. Another
+property of the message queue is  that the algorithm can run indefinitely and
+as opposed to restarting the algorithm you pass messages containing new data
+and/or state. This property avoids the time consuming initial convergence as the
+algorithm will be found in an optimized state when the solution is perturbed.
+Notice that:
 
 \begin{itemize}
-    \item The algorithm responds quickly to changes. In each iteration line~\ref{alg:actor-based-large-neighborhood-search:message-loop}. We call this a fine-grained response algorithm
-    \item If an improved solution is found, it is immediately being pushed to the persistence on line~\ref{alg:actor-based-large-neighborhood-search:better-solution}
-    \item That the optimization occurs in the repair function on line~\ref{alg:actor-based-large-neighborhood-search:repair}, which inserts operations in a greedy fashion. 
-	\item The pointer swapping that is performed on line~\ref{alg:actor-based-large-neighborhood-search:atomic-pointer-swap} when a new best solution is found instantaneously makes the solution available to other actors. The pointer swapping is crucial as it allows non-hierarchical model setups. 
+    \item The algorithm responds quickly to changes. In each iteration
+		line~\ref{alg:actor-based-large-neighborhood-search:message-loop}. We
+		call this a fine-grained response algorithm     
+	\item If an improved
+		solution is found, it is immediately being pushed to the persistence
+		on line~\ref{alg:actor-based-large-neighborhood-search:better-solution}
+	\item That the optimization occurs in the repair function on
+		line~\ref{alg:actor-based-large-neighborhood-search:repair},
+		which inserts work orders using a greedy algorithm.  	
+	\item The atomic pointer swapping that is performed on
+		line~\ref{alg:actor-based-large-neighborhood-search:atomic-pointer-swap} when a
+		new best solution is found instantaneously makes the solution available to other
+		actors/systems. The pointer swapping is crucial as it allows non-hierarchical
+		model setups.
 \end{itemize}
 
-The AbLNS algorithm will continuously run either optimizing the current plan or updating the plan 
-with new external input. Since the effects of a message is considered in every iteration, changing 
-conditions will immediately get acted upon. Since a fast response is paramount, exact optimization algorithms are deemed unworkable.
+The AbLNS algorithm will continuously run, either optimizing the current
+schedule or updating the schedule with new external input. Since the
+effects of a message is considered in every iteration, changing conditions
+will immediately get acted upon. Since a fast response is paramount, exact
+optimization algorithms are deemed unworkable.
 
 \subsection{Atomic Pointer Swapping and Software Architecture}
 Atomic pointer swapping offers a novel approach for managing the best
 solution found by the Actor-based Large Neighborhood Search (AbLNS) algorithm.
-Traditionally, in a metaheuristics such as Large Neighborhood Search (LNS) setup, 
-the best solution
-is cloned before the search continues. However, atomic pointer swapping enables
-the best solution to be shared across system components without introducing data
-races. This technique is essential in multithreaded environments, as it ensures
-the integrity of the solution during swaps. In software architecture, scaling
-is often achieved through vertical scaling (lengthening the dataflow) and
-horizontal scaling (increasing throughput) via message passing. While effective
-in many domains, this approach poses challenges for metaheuristics, which
-rely on rapid state mutations and solution improvements. 
+Traditionally, in a metaheuristics such as Large Neighborhood Search (LNS)
+setup, the best solution is cloned (deep copy) before the search continues. However, atomic
+pointer swapping enables the best solution to be shared across system components
+without introducing data races. This technique is essential in multithreaded
+environments, as it ensures the integrity of the solution during swaps. In
+software architecture, scaling is often achieved through vertical scaling
+(lengthening the dataflow) and horizontal scaling (increasing throughput)
+via message passing. While effective in many domains, this approach poses
+challenges for metaheuristics, which rely on rapid state mutations and solution
+improvements.
 
-Message passing in metaheuristics can create unpredictable behaviors,
-especially with bidirectional communication between components and metaheuristics. The
+Message passing in metaheuristics can create unpredictable behaviors, especially
+with bidirectional communication between components and metaheuristics. The
 limitations of message-passing systems in metaheuristics are well-documented,
 particularly in the context of parallel and multi-agent metaheuristics
-\citep{talbiMetaheuristicsDesignImplementation2009}. These systems often
-suffer from excessive message generation, leading to poor scalability,
-explainability, extendability, and performance. Key issues include: 
+\citep{talbiMetaheuristicsDesignImplementation2009}. These systems often suffer
+from excessive message generation, leading to poor scalability, explainability,
+extendability, and performance. Key issues include:
 
 \begin{itemize} 
 	\item The stochastic nature
 		of metaheuristics makes message-passing behavior unpredictable. 
-	\item Avoiding
-		hierarchical, unidirectional message flows often results in cycles. 
+	\item Using message passing often necessitates a
+		hierarchical setup, as bidirectional message flows often results in cycles. 
 	\item The
-		impact of increased messaging is difficult to analyze and manage. 
+		impact of additional types messages is difficult to understand and analyze. 
 \end{itemize}
 
 Atomic pointer swapping addresses these challenges by eliminating state
@@ -129,6 +145,6 @@ message passing. This method provides a streamlined, modular way to integrate
 metaheuristics, aligning with modern software architecture principles while
 avoiding their typical pitfalls \citep{richards_fundamentals_2020}. It should
 be noted that message passing is exceptional at dealing with one-off events that
-have varied and sporatic nature such as interfacing with stakeholders and external
+have varied and sporatic nature such as interfacing with actors and external
 systems.
 
